+ Init FBO & changed solution.

--- a/NewTrainingFramework/NewTrainingFramework.vcproj
+++ b/NewTrainingFramework/NewTrainingFramework.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="NewTrainingFramework"
+	Name="ShadowEffect"
 	ProjectGUID="{FC024EC8-32F4-4657-A2CB-14D2B3A931F8}"
 	RootNamespace="NewTrainingFramework"
 	Keyword="Win32Proj"
